fixed gaps and added shadow

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -39,7 +39,8 @@
     display: flex;
     -ms-flex-direction: row;
     flex-direction: row;
-    box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);    
+    margin-bottom: 1rem;
   }
   
   .player .player-content{
@@ -100,6 +101,7 @@
     display: flex;
     -ms-flex-direction: column;
     flex-direction: column;
+    box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);    
   }
   
   .card .card-header,
